<resources>
    <string name="app_name">Messanger</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_title">LOGIN</string>
    <string name="username_registration">Username</string>
    <string name="email">Email</string>
    <string name="password_registration">Password</string>
    <string name="register">REGISTER</string>
    <string name="registration">REGISTRATION</string>
    <string name="cancel">CANCEL</string>
    <string name="login_main">LOGIN</string>
    <string name="registration_main">REGISTRATION</string>
    <string name="registration_login">Registration</string>
    <string name="confirm_password">Confirm password</string>
    <string name="write_a_message">Write a message</string>
    <string name="send" translatable="false">&#xf1d8;</string>
    <string name="logout">logout</string>
    <string name="chat">Chat</string>
    <string name="users" translatable="false">&#xf007;</string>
    <string name="title_activity_messager">MessagerActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="textview">TextView</string>
    <string name="preferences">preferences</string>
    <string name="service_status">Service Status</string>
    <string name="stop_service">Stop Service</string>
    <string name="start_service">Start Service</string>
    <string name="write_text">write text</string>
    <string name="read_text">read text</string>
    <string name="enter_text">enter text</string>
    <string name="clear_text">clear text</string>
</resources>